--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fakerphp/faker": "^1.9.1",
         "kitloong/laravel-migrations-generator": "^7.0",
         "krlove/eloquent-model-generator": "^2.0",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
